<package>
  <name>saw_maxon_epos_text_console</name>
  <version>0.0.1</version>
  <description>sawMaxonEPOS text console</description>
  <maintainer email="hwei15@jhu.edu">Haochen Wei</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawGalilController</url>

  <build_depend>cisst</build_depend>
  <build_depend>saw_maxon_epos</build_depend>

  <run_depend>cisst</run_depend>
  <run_depend>saw_maxon_epos</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
